# FCC-Synthetic-TM

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: cli.py  db.py  gen.py
