[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fcc-synthetic-tm"
version = "0.1.0"
description = "SQLite schema + generators for synthetic FCC/TM data."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]

[tool.setuptools.packages.find]
where = ["src"]